--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
    --light-grayish-blue:    hsl(220, 16%, 96%);
    --very-light-gray:       hsl(0, 0%, 98%);
    --grayish-blue:          hsl(233, 8%, 62%);
-   --bright-cyan:           hsl(192, 70%, 96%);
-   --lime-green:            hsl(136, 65%, 51%);
+   --bright-cyan:           hsl(144, 96%, 78%);
+   --lime-green:            hsl(148, 100%, 26%);
    --dark-blue:             hsl(233, 26%, 24%);
    --white:                 hsl(0, 0%, 100%); 
 
@@ -47,3 +47,220 @@ html {
 
 img, span, svg { display: block; }
 
+    /* MAIN */
+
+.container {
+    max-width: 1440px;
+    margin: auto;
+}
+
+    /* HEADER */
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+}
+
+.navbar {
+    background: var(--white);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px var(--px);
+}
+
+.navbar-toggle-btn {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    padding: 0 20px;
+}
+
+.navbar-toggle-btn span {
+    display: block;
+    background: var(--dark-blue);
+    width: 25px;
+    height: 1px;
+    transition: .25s ease;
+}
+
+.navbar-toggle-btn.active .one { transform: rotate(45deg) translateY(3px); }
+
+.navbar-toggle-btn.active .two { display: none; }
+
+.navbar-toggle-btn.active .three { transform: rotate(-45deg) translateY(-3px); }
+
+.navbar-nav {
+    position: fixed;
+    background: var(--white);
+    top: 60px;
+    left: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 40px 0;
+    border-radius: 5px;
+    z-index: -1;
+    opacity: 0;
+    transition: 0.5s ease;
+    pointer-events: none;
+}
+
+.navbar-nav a {
+    color: var(--dark-blue);
+    display: block;
+}
+
+.navbar-nav.active {
+    top: calc(60px + 20px);
+    opacity: 1;
+    box-shadow: 0 0 100px 100px hsla(233, 26%, 24%, 0.2);
+    pointer-events: all;
+}
+
+.btn-primary {
+    background: linear-gradient(90deg, var(--lime-green), var(--bright-cyan));
+    color: var(--white);
+    padding: 15px 30px;
+    border-radius: 50px;
+    font-size: 15px;
+    font-weight: 700;
+    display: block;
+    margin: auto;
+    transition: 0.25s ease;
+}
+
+.btn-primary:hover { opacity: 0.7; }
+
+.navbar .btn-primary { display: none; }
+
+    /* HOME SECTION */
+
+main { overflow: hidden; }
+
+.home {
+    
+    padding-bottom: 60px;
+}
+
+.home-img-box {
+    background: url(/img/bg-intro-mobile.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: right;
+    padding: 0 15px;
+    margin-bottom: 40px;
+}
+
+.home-img-box .home-img {
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    object-position: bottom;
+}
+
+.home-title {
+    font-size: 38px;
+    font-weight: 400;
+    color: var(--dark-blue);
+    text-align: center;
+    margin-bottom: 20px;
+    padding: 0 20px;
+}
+
+.home-text {
+    margin: auto;
+    color: var(--grayish-blue);
+    text-align: center;
+    font-size: 15px;
+    line-height: 1.7;
+    margin-bottom: 30px;
+    padding: 0 20px;
+}
+
+@media (min-width: 1024px) {
+
+    /* NAV SECTION */ 
+    header { position: static; }
+
+    .navbar { padding: 0 var(--px); }
+
+    .navbar-toggle-btn { display: none; }
+
+    .navbar-nav {
+        position: static;
+        padding: 0;
+        z-index: 0;
+        flex-direction: row;
+        gap: 30px;
+        opacity: 1;
+        pointer-events: all;
+    }
+
+    .navbar-nav a {
+        font-size: 15px;
+        color: var(--grayish-blue);
+        padding: 30px 0;
+        transition: 0.25s ease;
+    }
+
+    .navbar-nav a:hover {
+        color: var(--dark-blue);
+        box-shadow: inset 0 -3px 0 var(--lime-green);
+    }
+
+    .navbar .btn-primary {
+        display: block;
+        margin: 0;
+    }
+
+    /* HOME SECTION */
+
+    .home {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        padding: 0;
+    }
+
+    .home-img-box {
+        width: 57%;
+        background: url(./img/bg-intro-desktop.svg) no-repeat 2% 75%;
+        background-size: 140%;
+        margin: 0;
+        padding: 0;
+    }
+
+    .home-img-box .home-img {
+        width: 55%;
+        transform: translate(0px, 30px) scale(1.1);
+        aspect-ratio: unset;
+    }
+
+    .home wrapper {
+        width: 45%;
+        padding-left: var(--px);
+    }
+
+    .home-title {
+        font-size: 55px;
+        text-align: left;
+        padding: 0;
+    }
+
+    .home-text {
+        text-align: left;
+        margin: 0;
+        padding: 0;
+        margin-bottom: 30px;
+        max-width: 450px;
+    }
+
+    .btn-primary { margin: 0; }
+
+
+}
