--- a/style.css
+++ b/style.css
@@ -360,6 +360,7 @@ blog-content-wrapper { padding: 10px 5px; }
 
 .blog .h4 {
     color: var(--foreground-secondary);
+    font-size: 13.5px;
 }
 
 .blog .h4 { 
@@ -477,10 +478,10 @@ blog-content-wrapper { padding: 10px 5px; }
     }
 
     .profile-wrapper {
-        width: 56px;
-        height: 56px;
+        width: 50px;
+        height: 50px;
         background: var(--action-primary);
-        padding: 3px;
+        padding: 5.5px;
         border-radius: 50%;
     }
 
@@ -517,6 +518,8 @@ blog-content-wrapper { padding: 10px 5px; }
         gap: 60px;
     }
 
+    /* CATEGORIES / TAGS SECTION */
+
     .aside {
         display: block;
         align-self: stretch;
@@ -547,6 +550,7 @@ blog-content-wrapper { padding: 10px 5px; }
         border-radius: 10px;
         box-shadow: 0 5px 5px hsla(0, 0%, 0%, 0.05);
         overflow: hidden;
+        cursor: pointer;
     }
 
     .topic-btn:not(:last-child) {
@@ -592,8 +596,10 @@ blog-content-wrapper { padding: 10px 5px; }
         background: var(--action-primary);
         color: var(--foreground-secondary);
         padding: 5px 10px;
-        font-size: var(--fs-5);
-        font-weight: 700;
+        font-size: 0.82rem;
+        font-weight: 600;
+        
+        
         border-radius: 5px;
     }
 
@@ -601,4 +607,37 @@ blog-content-wrapper { padding: 10px 5px; }
         background: var(--foreground-secondary);
         color: var(--action-primary);
     }
+
+    .download { margin-bottom: 3rem;}
+
+    .download p {
+        color: var(--foreground-secondary);
+        margin-bottom: 1rem;
+        margin-left: rem;
+        text-align: center;
+    }
+
+    .download-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .download-link .icon-box {
+        width: 45px;
+        height: 45px;
+        background: var(--action-secondary);
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 22px;
+    }
+
+    .download-link .icon-box:hover {
+        background: var(--lime-green);
+        color: var(--white);
+    }
+
 }
