--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 	--color4: hsl(210, 14%, 94%);
 	--color5: hsl(0, 0%, 99%);
 	--color6: hsl(0, 0%, 97%);
+	--color7: hsl(195, 100%, 24%);
 
     /*SPACING */
 
@@ -88,14 +89,32 @@ header {
     top: 0;
     left: 0;
     right: 0;
-    background: var(--color1);
+    background: var(--color7);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px var(--px);
     z-index: 10;
 }
-
+.navbar-nav {
+    position: fixed;
+    background: var(--color7);
+    top: 0px;
+    left: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 40px 0;
+    border-radius: 5px;
+    opacity: 0;
+    transition: 0.5s ease;
+    pointer-events: none;
+    margin-left: -20%;
+    margin-top: -1%;
+    z-index: 10;
+}
 .navbar-toggle-btn {
     display: flex;
     flex-direction: column;
@@ -116,26 +135,6 @@ header {
 .navbar-toggle-btn.active .two { display: none; }
 
 .navbar-toggle-btn.active .three { transform: rotate(-45deg) translateY(-3px); }
-
-.navbar-nav {
-    position: fixed;
-    background: var(--color1);
-    top: 0px;
-    left: 20px;
-    right: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 40px 0;
-    border-radius: 5px;
-    opacity: 0;
-    transition: 0.5s ease;
-    pointer-events: none;
-    margin-left: -20%;
-    margin-top: -1%;
-    z-index: 10;
-}
 
 .navbar-nav a {
     height: 25px;
@@ -918,7 +917,7 @@ blog-content-wrapper { padding: 10px 5px; }
     display: flex;
 	justify-content: left;
     flex-wrap: wrap;
-	padding-left: 2.25rem;
+	padding-left: 2.2rem;
 	padding-top: 1rem;
 	font-size: 3.5rem;
 	font-weight: 300;
@@ -951,9 +950,9 @@ blog-content-wrapper { padding: 10px 5px; }
     top: 0rem; left: -1.1rem;
     height: 2rem;
     width: 2rem;
-    border-radius: 30%;
+    border-radius: 15%;
     background-color:var(--color1);
-	border: 1px solid var(--color1);
+	border: 1px solid var(--color0);
 	transition: 0.2s ease-in-out;
 }
 .experience-info .experience-row .experience-column .experience-box:hover::before{
@@ -964,28 +963,28 @@ blog-content-wrapper { padding: 10px 5px; }
     width: 2rem;
     border-radius: 50%;
     background-color:var(--color2);
-	border: 1px solid var(--color1);
+	border: 1.5px solid var(--color1);
 	transition: 0.2s ease-in-out;
 }
 .experience-info .experience-row .experience-column .experience-box .year{
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     color:var(--color0);
     padding-bottom: .5rem;
 }
-
 .experience-info .experience-row .experience-column .experience-box .year i{
     padding-right: .5rem;
+	font-size: 1.2rem;
 	color: var(--color2);
 }
 .experience-info .experience-row .experience-column .experience-box .role-name{
     color:var(--color1);
-	font-weight: 500;
-    font-size: 2rem;
+	font-weight: 600;
+    font-size: 1.5rem;
 }
 .experience-info .experience-row .experience-column .experience-box .role-location{
     color:var(--color0);
-	font-weight: 400;
-    font-size: 1.5rem;
+	font-weight: 500;
+    font-size: 1.2rem;
 }
 .experience-info .experience-row .experience-column .experience-box .role-text{
     color:var(--color0);
@@ -1003,6 +1002,7 @@ blog-content-wrapper { padding: 10px 5px; }
     list-style-type: disc;
 }
 .second-experience-info{
+	margin-top: -7rem;
 	display: none;
 }
 @media only screen and (max-width: 1050px) {
@@ -1046,6 +1046,7 @@ blog-content-wrapper { padding: 10px 5px; }
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		margin-top: 1rem;
     }
 }
 @media (max-width: 1020px) {
@@ -1059,4 +1060,112 @@ blog-content-wrapper { padding: 10px 5px; }
 		font-size: 41px;
 	}
  }
+}
+/* accomplishments section */
+.accomplishments-info .accomplishments-row{
+    display: flex;
+	justify-content: right;
+    flex-wrap: wrap;
+}
+
+.accomplishments-info .accomplishments-row .accomplishments-column{
+    flex:1 1 40rem;
+    width: 50%;
+    padding: 2rem;
+	float: right;
+}
+
+.accomplishments-info .accomplishments-heading{
+    color: var(--color1);
+    display: flex;
+	justify-content: left;
+    flex-wrap: wrap;
+	padding-left: 2.2rem;
+	padding-top: 1rem;
+	font-size: 3rem;
+	font-weight: 300;
+	width: 30%;
+	float: left;
+}
+.accomplishments-info .accomplishments-row .accomplishments-column .accomplishments-box{
+    padding-left: 2.5rem;
+    padding-bottom: 2rem;
+    position: relative;
+}
+.accomplishments-info .accomplishments-row .accomplishments-column .accomplishments-box .a-box{
+    border: .01rem solid rgba(0,0,0,.2);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    border-radius: .5rem;
+	padding: 14px;
+	transition: 0.25s ease;
+}
+.accomplishments-info .accomplishments-row .accomplishments-column .accomplishments-box .a-box:hover{
+	transform: translate(0px, -10px);
+	box-shadow: 0 .5rem 1rem var(--color2);
+	background-color: var(--color1);
+	transition: 0.25s ease;
+	cursor: pointer;
+	color: var(--color5);
+}
+.accomplishments-info .accomplishments-row .accomplishments-column .accomplishments-box .accomplishments-event{
+	font-weight: 400;
+    font-size: 1rem;
+	padding-bottom: 0.5rem;
+}
+.accomplishments-info .accomplishments-row .accomplishments-column .accomplishments-box .accomplishments-reason{
+	padding-bottom: 2rem;
+}
+.accomplishments-info .accomplishments-row .accomplishments-column .accomplishments-box .accomplishments-doc{
+    color:var(--color2);
+    font-size: 1rem;
+	text-decoration: none;
+	transition: 0.2s ease;
+}
+.accomplishments-info .accomplishments-row .accomplishments-column .accomplishments-box .accomplishments-doc:hover{
+	font-size: 1.1rem;
+	transition: 0.2s ease;
+}
+.accomplishments-info .accomplishments-row .accomplishments-column .accomplishments-box .accomplishments-title{
+    color:var(--color2);
+	padding-bottom: 5px;
+	text-decoration: none;
+}
+.accomplishments-info .accomplishments-row .accomplishments-column .accomplishments-box .a-box:hover > .accomplishments-doc{
+	color: var(--color5);
+	transition: 0.2s ease;
+}
+.accomplishments-info .accomplishments-row .accomplishments-column .accomplishments-box .a-box:hover > .accomplishments-title{
+	color: var(--color5);
+	transition: 0.2s ease;
+}
+.second-accomplishments-info{
+	margin-top: -7rem;
+	display: none;
+}
+@media only screen and (max-width: 1155px) {
+    .accomplishments-info .accomplishments-heading{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-size: 3.5rem;
+		font-weight: 300;
+		transform: translate(0%, -50%);
+		width: 100%;
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+	}
+	#accomplishments-box1 #a-box1{
+		display: none;
+	}
+	#a-row #a-column #accomplishments-box1{
+		padding-left: 2rem;
+		padding-bottom: 2rem;
+		position: relative;
+	}
+	.second-accomplishments-info{
+		display: block;
+	}
+	#accomplishments-heading{
+		display: none;
+	}
 }
